--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,15 @@
 <display-name>web</display-name>
 
 <servlet>
+<servlet-name>notice_delete</servlet-name>
+<servlet-class>notice.notice_delete</servlet-class>
+</servlet>
+<servlet-mapping>
+<servlet-name>notice_delete</servlet-name>
+<url-pattern>/notice/notice_delete.do</url-pattern>
+</servlet-mapping>
+
+<servlet>
 <servlet-name>mailok2</servlet-name>
 <servlet-class>notice.mailok2</servlet-class>
 </servlet>
